# kubestat

./: config.yaml  list_all_pods.py  setup.cfg
kubestat/: __main__.py  test_version.py
