[metadata]
name = kubestat
version = attr: kubestat.__version__
description = A kubernetes statistics reporting tools
author = João Pinto
author_email = joao.pinto@vshn.ch
url = https://github.com/joaompinto/kubestat
license = BSD-3

[options]
zip_safe = False
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = kubestat/_version.py
versionfile_build = kubestat/_version.py
tag_prefix =
parentdir_prefix = kubestat-

[options.entry_points]
console_scripts =
    kubestat = kubestat.cli.__main__:main
